# aicode-reviewer

./: .env.example  .gitignore  AICODE-REVIEW-RESEARCH.md  DASHBOARD_TEST_GUIDE.md  E2@-PROMPTS.md  FLAT_DESIGN_IMPLEMENTATION.md  ISSUES.md  LOGIN_DEBUGGING_SUMMARY.md  MANUAL_TEST_GUIDE.md  MILESTONE_4.1_JAVASCRIPT_COMPLETION_SUMMARY.md  NEW_SCAN_BUTTON_SUMMARY.md  PLANNING.md  QUICK_START.md  README.md  REPORT_VIEW_FIX_SUMMARY.md  TASK.md  TESTCASE.md  browser_test_demo.html  completion_summary.py  debug_treesitter.py  demo_dart_support.py  demo_enhanced_solution_agent.py  docker-compose.yml  fix_dashboard_tests.py  fix_tests.py  frontend.Dockerfile  pyproject.toml  requirements.txt  start_servers.sh  test_api_endpoints.py  test_dashboard.py  test_enhanced_solution_manual.py  test_flat_design.py  test_frontend_login.html  test_login.js  test_login_ui.html  test_report_view_fix.py  test_simple_page.html
.cursor/rules/: development-rule.mdc
config/: settings.py
demo_reports/: demo_report.json  demo_report.md
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: AUTH_IMPLEMENTATION_PLAN.md  AUTH_SUMMARY.md  E2E-PROMPTS.md  MILESTONE_3.5_COMPLETION_SUMMARY.md  PERSONAL_ACCESS_TOKEN_GUIDE.md  PLANNING_v1.md  PROJECT_SCANNING_COMPLETION_REPORT.md  TASK.md  TASK_v1.md  milestone_3_2_completion_report.md
docs/database_migrations/: 001_create_users_table.sql  002_create_user_profiles_table.sql  003_create_user_sessions_table.sql  004_update_scans_table_for_auth.sql
scripts/: README.md  aicode-reviewer  check_logs.py  debug_frontend.py  demo_javascript_support.py  demo_llm_integration.py  demo_performance_optimization.py  demo_project_scanning.py  demo_reporting_agent.py  demo_webapp_backend.py  init-database.sh  init_schema.py  start-services.sh  start_dev_servers.py  start_infrastructure.sh  stop-services.sh  test_api_simple.py  test_full_setup.py  test_quick.py
src/: main.py
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  radio-group.tsx  select.tsx  use-toast.tsx
src/core_engine/: README.md  diagramming_engine.py  knowledge_graph_builder.py  orchestrator.py  risk_predictor.py
src/core_engine/agents/: ast_parsing_agent.py  code_fetcher_agent.py  enhanced_solution_suggestion_agent.py  llm_orchestrator_agent.py  project_scanning_agent.py  rag_context_agent.py  (+3 more)
src/webapp/: __init__.py
tests/core_engine/: test_diagramming_engine.py  test_knowledge_graph_builder.py  test_orchestrator.py  test_phase1_integration.py  test_phase2_rag_integration.py  test_phase2_solution_integration.py  test_risk_predictor.py
tests/integration/: test_project_scanning_integration.py
tests/performance/: test_parsing_performance.py
(+182 files in other folders)
